--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>3D Exploding Geometry con Grana</title>
   <style>
     html, body {
-      height: 100%,
+      height: 100%;
       margin: 0;
       overflow: hidden;
       background: transparent;
